@@ -1,30 +1,26 @@
 package org.example.backend.admin;
 
-import jakarta.servlet.http.HttpServletRequest;
 import org.example.backend.movie.Movie;
 import org.example.backend.movie.MovieService;
+import org.example.backend.movie.OneMovieOverView;
 import org.example.backend.requests.Requests;
 import org.example.backend.requests.RequestsService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+
+import jakarta.servlet.http.HttpServletRequest;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Collections;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class AdminControllerTest {
-
-    @Mock
-    private MovieService movieService;
 
     @Mock
     private AdminService adminService;
@@ -33,90 +29,89 @@ class AdminControllerTest {
     private RequestsService requestsService;
 
     @Mock
-    private HttpServletRequest httpRequest;
+    private MovieService movieService;
+
+    @Mock
+    private HttpServletRequest httpServletRequest;
 
     @InjectMocks
     private AdminController adminController;
 
-    private Movie movie1;
-    private Movie movie2;
-    private Requests request1;
-    private Requests request2;
-    private Admin admin1;
-
     @BeforeEach
-    void setUp() {
-        movie1 = Movie.builder()
-                .movieID(1L)
-                .name("Movie 1")
-                .description("Description 1")
-                .movieUrl("http://movie1.url")
-                .thumbnailUrl("http://thumb1.url")
-                .build();
-
-        movie2 = Movie.builder()
-                .movieID(2L)
-                .name("Movie 2")
-                .description("Description 2")
-                .movieUrl("http://movie2.url")
-                .thumbnailUrl("http://thumb2.url")
-                .build();
-
-        request1 = new Requests();
-        request1.setId(1L);
-        request1.setMovie(movie1);
-
-        request2 = new Requests();
-        request2.setId(2L);
-        request2.setMovie(movie2);
-        admin1 = Admin.builder()
-                .id(1L)
-                .name("Admin 1")
-                .build();
+    void setup() {
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
     void testFindAllAdminRequests() {
         Long adminId = 1L;
-
-        request1.setAdmin(admin1);
-        request2.setAdmin(admin1);
-
-        List<Requests> requests = Arrays.asList(request1, request2);
-        when(requestsService.getAllAdminRequests(adminId)).thenReturn(requests);
-
-
-        ResponseEntity<List<Requests>> response = adminController.findAllAdminRequests(httpRequest,adminId);
+        Requests req1 = mock(Requests.class);
+        Requests req2 = mock(Requests.class);
+        when(requestsService.getAllAdminRequests(adminId)).thenReturn(List.of(req1, req2));
+        when(httpServletRequest.getAttribute("userId")).thenReturn(adminId);
+        ResponseEntity<List<Requests>> response = adminController.findAllAdminRequests(httpServletRequest);
 
         assertEquals(2, response.getBody().size());
         verify(requestsService, times(1)).getAllAdminRequests(adminId);
     }
 
     @Test
-    void testDeclineRequest() {
-        when(httpRequest.getAttribute("userId")).thenReturn(1L);
-        ResponseEntity<String> response = adminController.declineRequest(httpRequest, 1L);
-        assertEquals(200, response.getStatusCodeValue());
+    void testDeclineRequest_Success() {
+        Long requestId = 5L;
+        Long adminId = 1L;
+        when(httpServletRequest.getAttribute("userId")).thenReturn(adminId);
+
+        ResponseEntity<String> response = adminController.declineRequest(httpServletRequest, requestId);
+
+        verify(adminService, times(1)).declineRequest(adminId, requestId);
         assertTrue(response.getBody().contains("declined successfully"));
-        verify(adminService, times(1)).declineRequest(1L, 1L);
     }
 
     @Test
-    void testAcceptRequest() {
-        when(httpRequest.getAttribute("userId")).thenReturn(1L);
-        ResponseEntity<String> response = adminController.acceptRequest(httpRequest, 1L);
-        assertEquals(200, response.getStatusCodeValue());
-        assertTrue(response.getBody().contains("accepted successfully"));
-        verify(adminService, times(1)).acceptRequests(1L, 1L);
+    void testDeclineRequest_Failure() {
+        Long requestId = 5L;
+        Long adminId = 1L;
+        when(httpServletRequest.getAttribute("userId")).thenReturn(adminId);
+        doThrow(new RuntimeException("Movie not found")).when(adminService).declineRequest(adminId, requestId);
+
+        ResponseEntity<String> response = adminController.declineRequest(httpServletRequest, requestId);
+
+        assertEquals(400, response.getStatusCodeValue());
+        assertTrue(response.getBody().contains("Failed to decline request"));
     }
 
+    @Test
+    void testAcceptRequest_Success() {
+        Long requestId = 10L;
+        Long adminId = 2L;
+        when(httpServletRequest.getAttribute("userId")).thenReturn(adminId);
+
+        ResponseEntity<String> response = adminController.acceptRequest(httpServletRequest, requestId);
+
+        verify(adminService, times(1)).acceptRequests(adminId, requestId);
+        assertTrue(response.getBody().contains("accepted successfully"));
+    }
+
+    @Test
+    void testAcceptRequest_Failure() {
+        Long requestId = 10L;
+        Long adminId = 2L;
+        when(httpServletRequest.getAttribute("userId")).thenReturn(adminId);
+        doThrow(new RuntimeException("Movie not found")).when(adminService).acceptRequests(adminId, requestId);
+
+        ResponseEntity<String> response = adminController.acceptRequest(httpServletRequest, requestId);
+
+        assertEquals(400, response.getStatusCodeValue());
+        assertTrue(response.getBody().contains("Failed to accept request"));
+    }
 
     @Test
     void testFindAllPendingRequests() {
-        List<Requests> requests = Arrays.asList(request1, request2);
-        when(requestsService.getAllPendingRequests()).thenReturn(requests);
+        Requests r1 = mock(Requests.class);
+        Requests r2 = mock(Requests.class);
+        when(requestsService.getAllPendingRequests()).thenReturn(List.of(r1, r2));
 
-        ResponseEntity<List<Requests>> response = adminController.findAllPendingRequests(httpRequest);
+        ResponseEntity<List<Requests>> response = adminController.findAllPendingRequests(httpServletRequest);
 
         assertEquals(2, response.getBody().size());
         verify(requestsService, times(1)).getAllPendingRequests();
@@ -124,14 +119,49 @@ class AdminControllerTest {
 
     @Test
     void testGetRequestedMovie() {
-        Long requestId = 1L;
+        Long requestId = 3L;
+        Movie movie = mock(Movie.class);
+        when(adminService.getRequestedMovie(requestId)).thenReturn(movie);
 
-        when(adminService.getRequestedMovie(requestId)).thenReturn(movie1);
+        ResponseEntity<Movie> response = adminController.getRequestedMovie(httpServletRequest, requestId);
 
-        ResponseEntity<Movie> response = adminController.getRequestedMovie(httpRequest,requestId);
-
-        assertEquals(movie1, response.getBody());
+        assertEquals(movie, response.getBody());
         verify(adminService, times(1)).getRequestedMovie(requestId);
     }
 
+    @Test
+    void testGetSpecificMovieOverview() {
+        Long movieId = 7L;
+        OneMovieOverView overview = mock(OneMovieOverView.class);
+        when(movieService.getMovieStatsByMovieId(movieId)).thenReturn(overview);
+
+        ResponseEntity<OneMovieOverView> response = adminController.getSpecificMovieOverview(httpServletRequest, movieId);
+
+        assertEquals(overview, response.getBody());
+        verify(movieService, times(1)).getMovieStatsByMovieId(movieId);
+    }
+
+    @Test
+    void testGetSystemOverview() {
+        SystemOverview overview = mock(SystemOverview.class);
+        when(adminService.getSystemOverview()).thenReturn(overview);
+
+        ResponseEntity<SystemOverview> response = adminController.getSystemOverview(httpServletRequest);
+
+        assertEquals(overview, response.getBody());
+        verify(adminService, times(1)).getSystemOverview();
+    }
+
+    @Test
+    void testAllBranches_EmptyLists() {
+        // Simulate empty lists returned from services
+        when(requestsService.getAllAdminRequests(1L)).thenReturn(Collections.emptyList());
+        when(requestsService.getAllPendingRequests()).thenReturn(Collections.emptyList());
+        when(httpServletRequest.getAttribute("userId")).thenReturn(1L);
+        ResponseEntity<List<Requests>> adminRequests = adminController.findAllAdminRequests(httpServletRequest);
+        ResponseEntity<List<Requests>> pendingRequests = adminController.findAllPendingRequests(httpServletRequest);
+
+        assertTrue(adminRequests.getBody().isEmpty());
+        assertTrue(pendingRequests.getBody().isEmpty());
+    }
 }
